<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_default"
        android:textSize="36sp"
        android:gravity="end"
        android:padding="16dp"
        android:background="@color/light_gray"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/seven"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/eight"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nine"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/divide"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/four"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/five"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/six"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/two"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/three"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zero"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/equals"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/advance"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/dark_blue"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/historyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history_title"
        android:textSize="20sp"
        android:padding="12dp"
        android:visibility="gone"
        android:minLines="4"
        android:background="@color/light_gray"
        android:textColor="@color/black" />

</LinearLayout>